--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "wagmi": "^0.5.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
@@ -28,21 +29,27 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
+    "babel-jest": "^28.1.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
+    "nft.storage": "^7.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
+    "ts-jest": "^28.0.8",
     "typescript": "^4.6.3",
     "vite": "^3.0.0"
   },
   "jest": {
-    "testEnvironment": "jsdom",
+    "testEnvironment": "node",
     "setupFilesAfterEnv": [
       "<rootDir>/jest-setup.ts"
     ],
     "moduleNameMapper": {
       "\\.(css|less)$": "identity-obj-proxy"
+    },
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx|mjs)$": "ts-jest"
     }
   }
 }
