--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "babel-jest": "^28.1.3",
+    "crunker": "^1.3.0",
+    "formik": "^2.2.9",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
