--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
-    "wagmi": "^0.5.5"
+    "wagmi": "^0.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -27,6 +27,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "babel-jest": "^28.1.3",
@@ -40,6 +41,7 @@
     "tailwindcss": "^3.1.4",
     "ts-jest": "^28.0.8",
     "typescript": "^4.6.3",
+    "uuid": "^8.3.2",
     "vite": "^3.0.0"
   },
   "jest": {
