--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "wagmi": "^0.6.4"
   },
   "devDependencies": {
+    "@apollo/client": "^3.6.9",
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
@@ -33,6 +34,7 @@
     "babel-jest": "^28.1.3",
     "crunker": "^1.3.0",
     "formik": "^2.2.9",
+    "graphql": "^16.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
