--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ts-jest": "^28.0.8",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2",
+    "vercel": "^28.1.0",
     "vite": "^3.0.0"
   },
   "jest": {
